--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,13 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Enabling H2 Console
 spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
  
 # Custom H2 Console URL
-spring.h2.console.path=/h2
+#spring.h2.console.path=/h2
 
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 tocken.secret = asdksadsakdnkncknd32
